--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -8,9 +8,10 @@ csv = "1.3.0"
 eframe = "0.29.1"
 egui = "0.29.1"
 rfd = "0.15.0"
-tree-sitter = "0.22.6"
-tree-sitter-cql = "0.2.0"
 tree-sitter-sequel = "0.3.5"
+tree-sitter-cql = { path = "../tree-sitter-cql"}
+uuid = { version = "1.10.0", features = ["v4"] }
+tree-sitter = "0.22.6"
 
 [profile.dev]
 opt-level = 1
